# shell-model

./: .gitignore  CMakeLists.txt  LongLaminar.cpp  README.md  Runge_Kutta.cpp  Runge_Kutta.hpp  Runge_Kutta1.cpp  ShellModel.cpp  Untitled.ipynb  bifurcation.cpp  bifurication.cpp  dist_of_laminar_time_per_parameter.cpp  dist_of_max_laminar_time_per_parameter.cpp  dist_of_mean_laminar_time.cpp  energy_spectrum.cpp  good_initialvalue.cpp  jacobi.txt  laminar_state_before_transition.cpp  lyapunov.cpp  np_load.cpp  npy_concatenater.cpp  stable_laminar_parameter_map.cpp  stagger_and_step.cpp  tempCodeRunnerFile.cpp  test.cpp  test1.cpp  trajectory_observation.cpp  wisteria.sh
.devcontainer/: Dockerfile  devcontainer.json
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
average_time_para/: average_laminar_time(line)_beta0.412to0.414_nu0.000164to0.000182_100times_epsilon0.1_1e+07period_latter1laminar0.42.npy  average_laminar_time(line)_beta0.41614to0.416165_nu0.00018to0.00018_32times_epsilon0.1_1e+09period10000dump1repeat_floor3e+3laminar0.416.npy  average_laminar_time(line)_beta0.416155to0.41618_nu0.00018to0.00018_32times_epsilon0.1_100000period10000dump1repeat_laminar0.416.npy  average_laminar_time(line)_beta0.416155to0.41618_nu0.00018to0.00018_32times_epsilon0.1_1e+06period10000dump1repeat_laminar0.416.npy  average_laminar_time(line)_beta0.416155to0.41618_nu0.00018to0.00018_32times_epsilon0.1_1e+08period10000dump1repeat_laminar0.416.npy  average_laminar_time(line)_beta0.416159to0.416162_nu0.00018to0.00018_30times_epsilon0.1_1e+09period10000dump1repeat_floor5000_laminar0.416.npy  average_laminar_time(line)_beta0.41615to0.41617_nu0.00018to0.00018_32times_epsilon0.1_1e+08period_latter1laminar0.42.npy  average_laminar_time(line)_beta0.416162to0.416162_nu0.00018to0.00018_1times_epsilon0.1_100000period10000dump1repeat_laminar0.416.npy  average_laminar_time(line)_beta0.416162to0.416165_nu0.00018to0.00018_32times_epsilon0.1_1e+08period10000dump5repeat_floor5000_laminar0.416.npy  average_laminar_time(line)_beta0.41617to0.41615_nu0.00018to0.00018_200times_epsilon0.1_2e+07period_latter1laminar0.42.npy  average_laminar_time(line)_beta0.41618to0.417_nu0.00018to0.00018_64times_epsilon0.1_1e+07period10000dump1repeat_laminar0.416.npy  average_laminar_time(line)_beta0.4162to0.416_nu0.00018to0.00018_32times_epsilon0.1_2e+07period_latter1laminar0.42.npy  average_laminar_time(line)_beta0.4165to0.4162_nu0.00018to0.00018_32times_epsilon0.1_2e+07period_latter1laminar0.42.npy  average_laminar_time(line)_beta0.416to0.4163_nu0.00018to0.00018_96times_epsilon0.1_1e+08period_latter1laminar0.42.npy  average_laminar_time(line)_beta0.416to0.4165_nu0.00018to0.00018_100times_epsilon0.1_20000period_latter1laminar0.47.npy  average_laminar_time(line)_beta0.416to0.42_nu0.00018to0.00018_200times_epsilon0.1_1e+07period_latter1laminar0.42.npy  average_laminar_time(line)_beta0.416to0.42_nu0.00018to0.00018_400times_epsilon0.1_2e+07period_latter1laminar0.42.npy  average_laminar_time(line)_beta0.416to0.43_nu0.00018to0.00018_100times_epsilon0.1_100period_latter1laminar0.42.npy  average_laminar_time(line)_beta0.416to0.43_nu0.00018to0.00018_100times_epsilon0.1_1e+07period_latter1laminar0.42.npy  average_laminar_time(line)_beta0.416to0.43_nu0.00018to0.00018_32times_epsilon0.1_1e+08period_latter1laminar0.42.npy  average_laminar_time(line)_beta0.416to0.43_nu0.00018to0.00018_6times_epsilon0.1_1e+08period_latter1laminar0.42.npy  average_laminar_time(line)_beta0.41to0.425_nu0.00018to0.00018_100times_epsilon0.1_20000period_latter1laminar0.47.npy  average_laminar_time(line)_beta0.41to0.425_nu0.0002to0.00016_100times_epsilon0.1_20000period_latter1laminar0.42.npy  average_laminar_time(line)_beta0.41to0.43_nu0.000168to0.00016_100times_epsilon0.1_20000period_latter1laminar0.47.npy  average_laminar_time(line)_beta0.46to0.465_nu0.00018to0.00018_100times_epsilon0.1_20000period_latter1laminar0.47.npy  average_laminar_time(line)_beta0.5to0.5_nu0.0019to0.0025_32times_epsilon0.1_10000period1000dump1repeat_floor0_laminar0.5.npy  average_laminar_time(line)_beta0.5to0.5_nu0.0019to0.0025_96times_epsilon0.1_100000period1000dump1repeat_floor0_laminar0.5.npy  (+2 more)
bif_data/: bif_0.413to0.425_nu0.000175to0.000175_400_500000.2.txt  (+3 more)
code/: CMakeLists.txt  LongLaminar.cpp  Runge_Kutta.hpp  ShellModel.cpp  average_jacobian.cpp  bifurcation.cpp  describe_npy.cpp  dist_of_average_laminar_time.cpp  dist_of_laminar_time.cpp  dist_of_max_laminar_time.cpp  dist_of_mean_laminar_time.cpp  energy_spectrum.cpp  error_dominant_shell.cpp  error_growth.cpp  extract_sync.cpp  extract_sync_online.cpp  good_initialValue.cpp  good_initialvalue.cpp  jacobi_plot.cpp  jacobian_observation.cpp  lyapunov.cpp  lyapunov_lorenz.cpp  lyapunov_test.cpp  make_Ndim_initial.cpp  matplotlibcpp.h  npy_concatenate.cpp  phase.cpp  phase_diff  phase_diff.cpp  phase_speed.cpp  phase_speed_diff.cpp  poincare_section.cpp  random_jacobian.cpp  real-imag_plot.cpp  search_laminar_around_turbulence.cpp  stable_laminar_parameter_map.cpp  stagger_and_step.cpp  stagger_and_step_sync.cpp  test.cpp  trajectory_observation.cpp  (+1 more)
code/matplotlib-cpp/: matplotlibcpp.h
cpp/: CMakeLists.txt  CoupledRossler.cpp  Eigen_numpy_converter.hpp  LongLaminar.cpp  Runge_Kutta.hpp  ShellModel.cpp  animation.cpp  average_jacobian.cpp  bifurcation.cpp  compile.sh  dist_of_average_laminar_time.cpp  energy_spectrum.cpp  error_dominant_shell.cpp  error_growth.cpp  error_growth_linear.cpp  error_growth_linear_mpi.cpp  error_growth_mpi.cpp  extract_sync.cpp  extract_sync_online.cpp  good_initialValue.cpp  jacobi_plot.cpp  jacobian_observation.cpp  jacobian_stats.cpp  jordan.cpp  laminar_duration.cpp  laminar_state_before_transition.cpp  lorenz.cpp  lyapunov.cpp  lyapunov_lorenz.cpp  lyapunov_test.cpp  make_Ndim_initial.cpp  manage.sh  npy_concatenate.cpp  phase.cpp  phase_diff.cpp  phase_speed.cpp  phase_speed_diff.cpp  poincare_section.cpp  random_jacobian.cpp  real-imag_plot.cpp  (+9 more)
cpp/shared/: .sync.ffs_db  Eigen_numpy_converter.hpp  Flow.cpp  Flow.hpp  Map.cpp  Map.hpp  matplotlibcpp.h  myFunc.cpp  myFunc.hpp
(+4502 files in other folders)
